applications/http-rpc-gateway/kustomize/overlays/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-rpc-gateway
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dummy.dummydomain.com
      http:
        paths:
          - backend:
              service:
                name: http-rpc-gateway
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dummy.dummydomain.com
